Fix styling issues on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -627,7 +627,7 @@ width: 100%;
   }
 
   /*Smaller mobile screens with a max width of 400px*/
-  @media screen and (max-width: 375px) 
+  @media screen and (min-width: 375px) 
   {
    #nav-links
    {
